Fix entitlements bootstrapping in unit tests